fix: install bc

--- a/orb.yml
+++ b/orb.yml
@@ -26,12 +26,18 @@ commands:
           command: |
             ./ssh-key-algo << parameters.github-user-hostname >>
       - run:
+          name: Install bc
+          command: |
+            # required for floating-point arithmetic
+            command -v bc || sudo apt-get install -y bc
+          when: always
+      - run:
           name: Make sure OpenSSH client version >= << parameters.openssh-client-version >>
           command: |
             # Because ssh -V prints to stderr it seems
             ssh_v=$(ssh -V 2>&1)
             version=$(echo $ssh_v | sed 's/OpenSSH_//' | cut -d"p" -f1-1)
-            [ $(echo "${version} >= << parameters.openssh-client-version >>" |bc -l) ]
+            [ $(echo "${version} >= << parameters.openssh-client-version >>" | bc -l) ]
           when: always
       - run:
           name: Cleanup
